# otus_matrix

./: .gitignore  .travis.yml  CMakeLists.txt  conanfile.txt
src/otus_matrix_exe/: CMakeLists.txt
src/otus_matrix_exe/src/: main.cpp
src/otus_matrix_lib/: CMakeLists.txt
src/otus_matrix_lib/include/otus_matrix_lib/: matrix.hpp  matrix_operation_base.hpp  matrix_operation_det.hpp  matrix_operation_sum.hpp  matrix_operation_trans.hpp  otus_matrix_api.hpp
src/otus_matrix_lib/src/: matrix_operation_base.cpp
src/otus_matrix_tests/: CMakeLists.txt  layout.hpp.in
src/otus_matrix_tests/src/: main.cpp
src/otus_matrix_tests/test_files/: in.txt
